# kahoot-to-anki

./: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
data/: test_kahoot.xlsx
kahoot_to_anki/: __init__.py  _version.py  cli.py  converter.py  main.py  processing.py
tests/: test_cli.py  test_processing.py  test_project.py
